--- a/downloads/dart_ex/for/dartpad_metadata.yaml
+++ b/downloads/dart_ex/for/dartpad_metadata.yaml
@@ -4,4 +4,4 @@ name: Dart for loop example1
 mode: dart
 # 所包含引入的程式名稱, 若為純 dart 則只包含 dart 程式, 若為 html 模式, 則加入 index.htm 與 style.css
 files:
-  - name: main.dart
+  - name: rungekutta.dart
