--- a/downloads/dart_ex/tmpe2/dartpad_metadata.yaml
+++ b/downloads/dart_ex/tmpe2/dartpad_metadata.yaml
@@ -4,6 +4,6 @@ name: Slither animattion
 mode: html
 # 所包含引入的程式名稱, 若為純 dart 則只包含 dart 程式, 若為 html 模式, 則加入 index.htm 與 style.css
 files:
-  - name: slithery.dart
+  - name: temperature2.dart
   - name: index.html
   - name: style.css
